--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.1",
   "description": "Examples for @cucumber/screenplay",
   "devDependencies": {
-    "@cucumber/screenplay": "^5.1.0",
     "@cucumber/cucumber": "^7.3.1",
     "@cucumber/electron": "4.1.3",
     "@cucumber/microdata": "2.1.0",
+    "@cucumber/screenplay": "^5.1.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/user-event": "13.5.0",
     "@types/eventsource": "1.1.15",
@@ -20,7 +20,7 @@
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "assembly-diagrams": "0.0.1",
-    "electron": "13.6.9",
+    "electron": "^31.2.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-node": "11.1.0",
@@ -51,7 +51,8 @@
     "cucumber-dom-http": "cucumber-electron --profile domHttp --stylesheet features/src/components/style.css",
     "eslint": "eslint --ext ts,tsx --max-warnings 0 src features",
     "eslint-fix": "eslint --ext ts,tsx --max-warnings 0 --fix src features",
-    "pretty-quick": "pretty-quick --staged"
+    "pretty-quick": "pretty-quick --staged",
+    "test:hear": "cucumber-js features/hear_shout.feature"
   },
   "repository": {
     "type": "git",
